<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/common_padding"
    android:layout_marginRight="@dimen/common_padding"
    android:layout_marginTop="@dimen/common_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/lblRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/very_big_text"
            android:text="Register"/>

        <ScrollView
            android:layout_below="@+id/lblRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnSignUp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress|textNoSuggestions" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword|textNoSuggestions" />

                <EditText
                    android:id="@+id/txtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"

                    android:inputType="textCapSentences" />

                <EditText
                    android:id="@+id/txtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text|textNoSuggestions" />

                <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="textCapSentences" />

                <EditText
                    android:id="@+id/txtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:maxLength="10"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/txtState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/state"
                    android:inputType="textNoSuggestions" />

                <EditText
                    android:id="@+id/txtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/city"
                    android:inputType="textNoSuggestions" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding"
                    android:text="@string/user_type"
                    android:visibility="gone" />

                <RadioGroup
                    android:id="@+id/rgUserType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/rbUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/common_padding"
                        android:checked="true"
                        android:text="@string/user" />

                    <RadioButton
                        android:id="@+id/rbOfficer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/officer" />
                </RadioGroup>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding"
                    android:text="@string/gender" />

                <RadioGroup
                    android:id="@+id/rgSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/common_padding"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/lblLogin"
                    android:layout_marginTop="@dimen/common_padding"
                    android:background="@color/colorPrimary"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/lblLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/huge_padding"
                    android:layout_marginTop="@dimen/small_padding"
                    android:padding="@dimen/very_small_padding"
                    android:text="@string/existing_user"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/rlLoading"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_overlay"
            android:clickable="true"
            android:visibility="gone">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/common_padding"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/common_padding"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/smallPadding"
                        android:text="Loading..."
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>