<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_marginLeft="@dimen/common_padding"
    android:layout_marginRight="@dimen/common_padding"
    android:layout_marginTop="@dimen/common_padding"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/state"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/city"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/txtSeriesNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/series_number"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/txtVehicleNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/vehicle_number"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lblLogin"
            android:layout_marginTop="@dimen/common_padding"
            android:background="@color/colorPrimary"
            android:text="Search"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_overlay"
        android:clickable="true"
        android:visibility="visible">

        <android.support.v7.widget.CardView
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/common_padding"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/common_padding"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/smallPadding"
                    android:text="Loading..."
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</FrameLayout>