<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnAddVehicle"
        android:layout_margin="@dimen/large_space"
        android:background="@color/white">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/lytTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/lblCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:gravity="center"
                        android:paddingLeft="@dimen/veryveryhighPadding"
                        android:layout_weight="1"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cancel"/>
                </LinearLayout>


                <EditText
                    android:id="@+id/txtVehicleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vehicle_name"
                    android:visibility="gone"
                    android:inputType="text|textNoSuggestions" />


                <EditText
                    android:id="@+id/txtVehicleState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="Vehicle State"
                    android:inputType="text|textNoSuggestions" />


                <EditText
                    android:id="@+id/txtVehicleCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="Vehicle City"
                    android:inputType="text|textNoSuggestions" />


                <EditText
                    android:id="@+id/txtSeriesNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/series_number"
                    android:inputType="textCapCharacters|textCapWords"
                    android:textAllCaps="true" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtVehicleNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vehicle_number"
                    android:layout_marginRight="@dimen/large_space"
                    android:layout_weight="1"
                    android:inputType="number|textNoSuggestions"
                    android:maxLength="4" />

                <ImageView
                    android:id="@+id/imgCamara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:src="@drawable/ic_camara"/></LinearLayout>

                <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="true"
                    android:hint="Taw Address"
                    android:inputType="text|textNoSuggestions" />

                <EditText
                    android:id="@+id/txtState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="State" />

                <EditText
                    android:id="@+id/txtCityCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="City" />


                <EditText
                    android:id="@+id/txtVehicleType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/vehicle_type"
                    android:inputType="text|textNoSuggestions" />


            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/rlLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_overlay"
            android:clickable="true"
            android:visibility="gone">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/common_padding"

                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/common_padding"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/smallPadding"
                        android:text="Loading..."
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnAddVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginRight="@dimen/common_padding"
        android:layout_marginLeft="@dimen/common_padding"
        android:background="@color/colorPrimaryDark"
        android:text="taw vehicle"
        android:textColor="@android:color/white" />
</RelativeLayout>